--- a/default.html
+++ b/default.html
@@ -26,100 +26,48 @@
     <section>
       <h1 class="w3-center">
         Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!
-      <h1>
+      </h1>
       <p class="w3-opacity"> 
-      <h3> Der TuS feiert <b>Sommerferst</b><br><small>20.08.2022</small></h3>
-          Am 13.8. haben wir mit euch unser erstes Sommerferst gefeiert. Wir möchten
-          uns nochmal ganz herzlich über eure Treue während der, für uns alle, schwierigen
-          Corona-Zeit bedanken. Ohne euch wären wir nicht! Im Namen des Vorstands 
-          möchten wir uns für diesen schönen (wenn auch heißen) Tag bedanken und 
-          hoffen es hat euch auch gefallen. Hier findet ihr noch ein paar schöne Bilder
-          vom Tag.<br>
+      <h3> Einladung zu unserer <b>Jahreshauptversammlung 23.03.2023</b><br><small>11.03.2023</small></h3>
+        Sehr geehrte/s Mitglied/er,<br>
+        zu unserer Jahreshauptversammlung laden wir Sie hiermit herzlich ein.<br>
+        <br>
+
+ 
+
+        Sie findet statt am Donnerstag, den <b>23. März 2023 im Pfarrheim St. Brictius</b> im Raum E.G. in 50769 Köln-Merkenich.<br>
+
+          Beginn:  <b>19:00 Uhr</b><br>
           <br>
-          Genießt weiterhin den Sommer,<br>
-          der Vorstand.<br>
-      <div class="slideshow-container">
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">1 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6223.JPG" style="width:100%">
-          <div class="text">Unser erster Vorsitzender, Hansjörg Schneider, eröffnet das Vereinsfest 2022.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">2 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6225.JPG" style="width:100%">
-          <div class="text">Unsere Hüpfburg wurde durch die hohen Temperaturen leider 
-            wenig genutzt.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">3 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6227.JPG" style="width:100%">
-          <div class="text">Die große Hitze hat auch dazu geführt, dass Familien mit Kindern
-          am Anfang nicht stark vertreten waren.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">4 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6228.JPG" style="width:100%">
-          <div class="text">Herr Bruno Klais vom Bürgerverein Merkenich folgte unserer 
-          Einladung, bedankte sich für die gemeinsame gute Arbeit und stand den Besuchern
-          für Fragen zur Verfügung.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">5 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6229.JPG" style="width:100%">
-          <div class="text">Die Mitglieder der Damengymnastik und der Wandersparte waren
-          reichlich vertreten und genossen das Beisammensein.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">6 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6230.JPG" style="width:100%">
-          <div class="text">Die angebotenen Speisen und Getränke kamen gut an.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">7 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6231.JPG" style="width:100%">
-          <div class="text">Die Merkenicher freiwillige Feuerweher kam mit einem großen  Fahrzeug vorbei und gab Interessierten ausführliche Erklärungen.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">8 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6232.JPG" style="width:100%">
-          <div class="text">Der TuS Merkenich bedankt sich herzlichst.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">9 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6235.JPG" style="width:100%">
-          <div class="text">Unsere besonderer Dank gilt Herrn Günther Paffenholz, der
-          mit seinen stolzen 93 Jahren mit uns gefeiert hat.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">10 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6237.JPG" style="width:100%">
-          <div class="text">Für unsere Kleinsten wurden Spiele angeboten, die trotz
-          der Hitze gut angenommen wurden.</div>
-        </div>
-        <div name="supSlide" class="mySlides fade">
-          <div class="numbertext">11 / 11</div>
-          <img src="img/sommerfest_2022/IMG_6238.JPG" style="width:100%">
-          <div class="text">Bis zum späten Nachmittag wurde auch bei Kaffee und Kuchen fröhlich diskutiert.</div>
-        </div>
-        <a class="prev" onclick="plusSlides(-1, 'supSlide', 'supDot')">&#10094;</a>
-        <a class="next" onclick="plusSlides(1, 'supSlide', 'supDot')">&#10095;</a>
-      </div>
-      <br>
-
-      <div style="text-align:center">
-        <span name="supDot" class="dot" onclick="currentSlide(1, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(2, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(3, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(4, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(5, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(6, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(7, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(8, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(9, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(10, 'supSlide', 'supDot')"></span>
-        <span name="supDot" class="dot" onclick="currentSlide(11, 'supSlide', 'supDot')"></span>
-      </div>
-
+          Wir freuen uns auf euch, <br>
+          Der Vorstand.
+      <h3>Yoga-Kurs für Anfänger<br><small>10.03.2022</small></h3>
+          <h4>
+            Wir wollen nochmal an unseren Yoga-Kurs für Anfänger. Probiert es einfach mal aus.
+          </h4>
+          Termin: Donnerstags 18:30 bis 20:00 Uhr<br>
+          Ort: Turnhalle der Grundschule Merkenich<br>
+          Kursleiter: Dario Schepelmann<br>
+          <br>
+          <table>
+            <tr> <th>Mitglieder des TuS </th> <th> kostenlos</th> </tr>
+            <tr> <th>Nicht-Mitglieder/Partner*innen von Mitegliedern </th> <th> 80 Euro</th> </tr>
+            <tr> <th>Ehepaare </th> <th> 100 Euro</th> </tr>
+            <tr> <th>Auszubildende/Studierende/Schüler*innen </th> <th> 60 Euro</th> </tr>
+            </tr>
+          </table>
+          Yoga unterstützt dich um mit den Anforderungen des Alltags gut
+          umzugehen. Es mobilisiert körpereigene Energien, mit denen du
+          gelassen und selbstbewusst handeln kannst. Eine zentrale Bedeutung
+          spielt der Atem, welcher durch eine bewusste Ein- und Ausatmung, die
+          Bewegung und die Asanas führt. Dein Körper wird durch die Übungen
+          beweglicher, du kannst Stress besser loslassen und du lernst dich
+          tief zu entspannen. Die Yogastunde beginnt mit einer Einstimmung und
+          einer Aufwärmphase. Anschließend folgt eine Übungsreihe und eine
+          Tiefenentspannung. <br> Meldet euch bei Interessen bei <b>Anita
+          Lenarz</b> (0221-705774) oder <b>Andrea Spahn</b> (01792828278).<br>
+        Wir freuen uns auf euch! <br>
+          <br>
 
       <h3> Einladung zu unserem <b>Vereinsfest am 13.8.2022</b><br><small>11.07.2022</small></h3>
           Zum 10-jährigen Bestehen unseres Vereins hat uns die Corona-Pandemie einen Strich
