--- a/site/home.html
+++ b/site/home.html
@@ -22,65 +22,153 @@
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
       <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
+    <h1 class="w4-wide w4-center"> 
+      Unser Vereinsfest zum 10-jähriges Bestehen des TuS Köln Merkenich.
+    </h1>
+      Am 13.8. haben wir mit euch unser erstes Sommerferst gefeiert. Wir
+      möchten uns nochmal ganz herzlich über eure Treue während der, für uns
+      alle, schwierigen Corona-Zeit bedanken. Ohne euch wären wir nicht! Im
+      Namen des Vorstands möchten wir uns für diesen schönen (wenn auch heißen)
+      Tag bedanken und hoffen es hat euch auch gefallen. Hier findet ihr noch
+      ein paar schöne Bilder vom Tag.<br> <br> Es war ein schönes Fest mit
+      euch!<br> Auf die nächsten 10 Jahre!<br> der Vorstand.<br>
+      <div class="slideshow-container">
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">1 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6223.JPG" style="width:100%">
+          <div class="text">Unser erster Vorsitzender, Hansjörg Schneider, eröffnet das Vereinsfest 2022.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">2 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6225.JPG" style="width:100%">
+          <div class="text">Unsere Hüpfburg wurde durch die hohen Temperaturen leider 
+            wenig genutzt.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">3 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6227.JPG" style="width:100%">
+          <div class="text">Die große Hitze hat auch dazu geführt, dass Familien mit Kindern
+          am Anfang nicht stark vertreten waren.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">4 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6228.JPG" style="width:100%">
+          <div class="text">Herr Bruno Klais vom Bürgerverein Merkenich folgte unserer 
+          Einladung, bedankte sich für die gemeinsame gute Arbeit und stand den Besuchern
+          für Fragen zur Verfügung.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">5 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6229.JPG" style="width:100%">
+          <div class="text">Die Mitglieder der Damengymnastik und der Wandersparte waren
+          reichlich vertreten und genossen das Beisammensein.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">6 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6230.JPG" style="width:100%">
+          <div class="text">Die angebotenen Speisen und Getränke kamen gut an.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">7 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6231.JPG" style="width:100%">
+          <div class="text">Die Merkenicher freiwillige Feuerweher kam mit einem großen  Fahrzeug vorbei und gab Interessierten ausführliche Erklärungen.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">8 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6232.JPG" style="width:100%">
+          <div class="text">Der TuS Merkenich bedankt sich herzlichst.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">9 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6235.JPG" style="width:100%">
+          <div class="text">Unsere besonderer Dank gilt Herrn Günther Paffenholz, der
+          mit seinen stolzen 93 Jahren mit uns gefeiert hat.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">10 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6237.JPG" style="width:100%">
+          <div class="text">Für unsere Kleinsten wurden Spiele angeboten, die trotz
+          der Hitze gut angenommen wurden.</div>
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">11 / 11</div>
+          <img src="../img/sommerfest_2022/IMG_6238.JPG" style="width:100%">
+          <div class="text">Bis zum späten Nachmittag wurde auch bei Kaffee und Kuchen fröhlich diskutiert.</div>
+        </div>
+        <a class="prev" onclick="plusSlides(-1, 'supSlide', 'supDot')">&#10094;</a>
+        <a class="next" onclick="plusSlides(1, 'supSlide', 'supDot')">&#10095;</a>
+      </div>
+      <br>
+
+      <div style="text-align:center">
+        <span name="supDot" class="dot" onclick="currentSlide(1, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(2, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(3, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(4, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(5, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(6, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(7, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(8, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(9, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(10, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(11, 'supSlide', 'supDot')"></span>
+      </div>
+
+
     <h1 class="w3-wide w3-center"> Leitbild</h1>
-    Wir bieten Breitensport in familiärer Atmosphäre für
-    junge und jung gebliebene ältere Mitbürger.
-    Wir verbinden so unterschiedliche Sportarten wie Gymnastik, Wandern und Segeln 
-    und bringen so auch unsere Mitglieder zusammen.
-    Koorperationsverträge mit der Stadt Köln spiegeln die Verbundenheit mit unserem
-    Stadtteil wider. Unsere soziale Verantwortung beweisen wir mit niedrigen 
-    Beiträgen bei gleichzeitig gesunden Bilanzen.
+    Wir bieten Breitensport in familiärer Atmosphäre für junge und jung
+    gebliebene ältere Mitbürger. Wir verbinden so unterschiedliche Sportarten
+    wie Gymnastik, Wandern und Segeln und bringen so auch unsere Mitglieder
+    zusammen. Koorperationsverträge mit der Stadt Köln spiegeln die
+    Verbundenheit mit unserem Stadtteil wider. Unsere soziale Verantwortung
+    beweisen wir mit niedrigen Beiträgen bei gleichzeitig gesunden Bilanzen.
     <h1 class="w3-wide w3-center"> Vorstellung Verein</h1>
     <p>
       Unser Verein wurde im Jahr 2009 gegründet um den Sparten Gymnastik,
-      Segeln und Wandern, 
-      die sich aus der Organisation des SV-Köln-Merkenich 1921 e.V. lösen wollten eine neue 
-      sportliche Heimat zu bieten. Aus organisatorischen Gründen konnten wir jedoch erst am 1. 
-      Januar 2010 mit dem Sportbetrieb beginnen. Heute verfügt der TuS Köln-Merkenich über circa
-      150 aktive Mitglieder. Wir fühlen uns besonders der
-      Förderung der Jugend verpflichtet, auch
-      die Integration anderer Nationalitäten liegt uns am Herzen. Selbstverständlich versuchen
-      wir auch junge und junggebliebene Menschen mit Angeboten in unserem Verein zusammen
+      Segeln und Wandern, die sich aus der Organisation des SV-Köln-Merkenich
+      1921 e.V. lösen wollten eine neue sportliche Heimat zu bieten. Aus
+      organisatorischen Gründen konnten wir jedoch erst am 1. Januar 2010 mit
+      dem Sportbetrieb beginnen. Heute verfügt der TuS Köln-Merkenich über
+      circa 150 aktive Mitglieder. Wir fühlen uns besonders der Förderung der
+      Jugend verpflichtet, auch die Integration anderer Nationalitäten liegt
+      uns am Herzen. Selbstverständlich versuchen wir auch junge und
+      junggebliebene Menschen mit Angeboten in unserem Verein zusammen
       zubringen.
     </p>
     <h1 class="w3-wide w3-center"> Sparten</h1>
     <p>
-      Der TuS Köln Merkenich deckt mit den Abteilungen Gynmastik und Wandern große Gebiete des 
-      Breitensportes ab. Mit der Segelabteilung sind wir aber auch in einem hochspezialisierten 
-      Sportbereich vertreten.
+      Der TuS Köln Merkenich deckt mit den Abteilungen Gynmastik und Wandern
+      große Gebiete des Breitensportes ab. Mit der Segelabteilung sind wir aber
+      auch in einem hochspezialisierten Sportbereich vertreten.
     </p>
     <p>
-      Unsere Gynmanstiksparte widmet sich hauptsächlich dem Frauen- und Jugendturnen, während 
-      Wandern allen Altersgruppen die Möglichkeit bietet in Gemeinschaft die Natur zu Fuß und 
-      damit hautnah zu erleben. Segeln wiederum eröffnet dem interessierten Wassersportler große
-      Möglichkeiten Teamgeist zu erleben.
+      Unsere Gynmanstiksparte widmet sich hauptsächlich dem Frauen- und
+      Jugendturnen, während Wandern allen Altersgruppen die Möglichkeit bietet
+      in Gemeinschaft die Natur zu Fuß und damit hautnah zu erleben. Segeln
+      wiederum eröffnet dem interessierten Wassersportler große Möglichkeiten
+      Teamgeist zu erleben.
     </p>
     <p>
-      Darüber hinaus kommt aber auch die Geselligkeit nicht zu kurz. So treffen sich die
-      Mitglieder der Sparte Wandern jährlich im Sommer zu einem Grillnachmittag und im Dezember
-      im Rahmen der Spartenversammling zu einer Advents- bzw. Weihnachtsfeier.
+      Darüber hinaus kommt aber auch die Geselligkeit nicht zu kurz. So treffen
+      sich die Mitglieder der Sparte Wandern jährlich im Sommer zu einem
+      Grillnachmittag und im Dezember im Rahmen der Spartenversammling zu einer
+      Advents- bzw. Weihnachtsfeier.
     </p>
     <p>
-      Um das Budget zu entlasten wird bei den Seglern auch das gemeinsame Arbeiten an den 
-      Booten im Frühjahr und das winterfest machen im Herbst als Arbeitsbeitrag verlangt. Bei
-      diesen Arbeitenseinsätzen wird jeder nach seinen Fähigkeiten eingeteilt. Anstrich des 
-      Unterwasserschiffes mit Antifouling oder Polieren der Bordwände oder Reinigen des
-      Innenbereiches oder Ölwechsel am Dieselmoter... es gibt immer viel zu tun. Aber geselliges
-      Segeln mit Freunden oder anderen Seglern sind der Lohn für diese alljährlichen Einsätze.
-      Zum Jahresabschluss wird ein gemeinsamer Abend mit Essen, Trinken und natürlich
-      Erfahrungsaustausch, wie unter Seglern üblich, organisiert.
+      Um das Budget zu entlasten wird bei den Seglern auch das gemeinsame
+      Arbeiten an den Booten im Frühjahr und das winterfest machen im Herbst
+      als Arbeitsbeitrag verlangt. Bei diesen Arbeitenseinsätzen wird jeder
+      nach seinen Fähigkeiten eingeteilt. Anstrich des Unterwasserschiffes mit
+      Antifouling oder Polieren der Bordwände oder Reinigen des Innenbereiches
+      oder Ölwechsel am Dieselmoter... es gibt immer viel zu tun. Aber
+      geselliges Segeln mit Freunden oder anderen Seglern sind der Lohn für
+      diese alljährlichen Einsätze. Zum Jahresabschluss wird ein gemeinsamer
+      Abend mit Essen, Trinken und natürlich Erfahrungsaustausch, wie unter
+      Seglern üblich, organisiert.
     </p>
     <h1 class="w3-wide w3-center"> Vorstand</h1>
     <p> Kurze Vorstellung der Vorstandsmitglieder </p>
-<!--
-	<nav class=navBar2>
-      <a href="#"class="w3-button w3-bar-item">Vorstand</a>
-      <a href="#"class="w3-button w3-bar-item">Chronik</a>
-      <a href="#"class="w3-button w3-bar-item">Kontakt</a>
-      <a href="#"class="w3-button w3-bar-item">Kooperationen</a>
-      <a href="#"class="w3-button w3-bar-item">Satzung</a>
-  </nav>
--->
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
+  <script src="../slides.js"></script>
 </html>
