--- a/site/wandern_kontakt.html
+++ b/site/wandern_kontakt.html
@@ -30,9 +30,9 @@
     <section>
     <h1 class="w3-wide w3-center"> Ansprechpartner</h1>
     <p>
-      Hans Henke <br>
+      Elisabeth Achterbeck <br>
       eMail:  <a href = "mailto:
-      hans.henke@tuskoelnmerkenich.de">hans.henke@tuskoelnmerkenich.de</a>
+      elisabeth.achterbeck@tuskoelnmerkenich.de">elisabeth.achterbeck@tuskoelnmerkenich.de</a>
     </p>
     </section>
   </body>
