Fixes name elisabeth and replaces deploy now with simple scp action.

--- a/site/wandern_kontakt.html
+++ b/site/wandern_kontakt.html
@@ -30,9 +30,9 @@
     <section>
     <h1 class="w3-wide w3-center"> Ansprechpartner</h1>
     <p>
-      Elisabeth Achterbeck <br>
+      Elisabeth Achterberg <br>
       eMail:  <a href = "mailto:
-      elisabeth.achterbeck@tuskoelnmerkenich.de">elisabeth.achterbeck@tuskoelnmerkenich.de</a>
+      elisabeth.achterberg@tuskoelnmerkenich.de">elisabeth.achterberg@tuskoelnmerkenich.de</a>
     </p>
     </section>
   </body>
