Adds styles for tables and centering. Adds informaion for koelle aktive.

--- a/default.html
+++ b/default.html
@@ -28,6 +28,137 @@
         Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!
       </h1>
       <p class="w3-opacity"> 
+      <h3>
+        Kölle Aktive: Angebote in unserer Umgebung<br>
+        <small>25.05.2023</small>
+      </h3>
+      <p>
+        Liebe Mitglieder, <br>
+        Wir wollen euch auf die tollen Sportangebote in unserer Nähe aufmerksam
+        machen. Unter anderem in Nippes und Chorweiler gibt es ein umfangreiches
+        Program, bei dem mit Sicherheit für jeden etwas dabei ist. Übrigens,
+        die Teilnahme all dieser tollen Angebote ist <b>KOSTENLOS</b>, ganz
+        unabhängig davon, ob ihr Mitglied im Verein seid oder nicht.<br>
+        Angebote in direkter Umgebung von Chorweiler:<br>
+        <table class="tableWithBorders">
+          <tr>
+            <th>Verein</th>
+            <th>Aktivität</th>
+            <th>Treffpunkt</th>
+            <th>Uhrzeit</th>
+            <th>Leiter:in</th>
+          </tr>
+          <tr>
+            <td>TuS Merkenich</td>
+            <td>Nordic Walking</td>
+            <td>BSA Chorweiler PP</td>
+            <td>Mo.: 18-19Uhr</td>
+            <td>Disi</td>
+          </tr>
+          <tr>
+            <td>DJK Wiking Köln</td>
+            <td>Qi Gong</td>
+            <td>Wiese Lebensbaumweg</td>
+            <td>Di.: 10-11Uhr</td>
+            <td>Michael</td>
+          </tr>
+          <tr>
+            <td>SV Fühlingen Chorweiler</td>
+            <td>Nordic Walking</td>
+            <td>BSA Chorweiler PP</td>
+            <td>Mi.: 18-19Uhr</td>
+            <td>Karin</td>
+          </tr>
+          <tr>
+            <td>SV Fühlingen Chorweiler</td>
+            <td>Slow Jogging</td>
+            <td>BSA Chorweiler PP</td>
+            <td>Mi.: 18-19Uhr</td>
+            <td>Karin</td>
+          </tr>
+          <tr>
+            <td>DJK Wiking Köln</td>
+            <td>Tai Chi</td>
+            <td>Wiese Lebensbaumweg</td>
+            <td>Fr.: 10-11Uhr</td>
+            <td>Michael</td>
+          </tr>
+        </table><br>
+        Angebote in direkter Umgebung von Nippes:<br>
+        <table class="tableWithBorders">
+          <tr>
+            <th>Verein</th>
+            <th>Aktivität</th>
+            <th>Treffpunkt</th>
+            <th>Uhrzeit</th>
+            <th>Leiter:in</th>
+          </tr>
+          <tr>
+            <td>Schule für asiatische Kampfkunst e.V.</td>
+            <td>Yoga</td>
+            <td>Nordpark</td>
+            <td>Mo.: 18-19Uhr</td>
+            <td>Selim</td>
+          </tr>
+          <tr>
+            <td>DJK Löwe</td>
+            <td>Vinyasa Yoga</td>
+            <td>Nordpark</td>
+            <td>Di.: 18-19Uhr</td>
+            <td>Jil</td>
+          </tr>
+          <tr>
+            <td>Ski-Club Alpenrose e.V. Köln</td>
+            <td>Bewegt älter werden</td>
+            <td>BSA Weidenpesch</td>
+            <td>Mi.: 18-19Uhr</td>
+            <td>Rosi und Herber</td>
+          </tr>
+          <tr>
+            <td>Turn- und Fechtgemeinde 1878 Köln-Nippes e.V.</td>
+            <td>Deutsches Sportabzeichen</td>
+            <td>BSA Merheimer Str.</td>
+            <td>Do.: 18-19Uhr</td>
+            <td>Jürgen</td>
+          </tr>
+          <tr>
+            <td>Turnerkreis Nippes 1903 e.V.</td>
+            <td>Tai Chi und Qi Gong</td>
+            <td>Wiese Heilig-Geist KH</td>
+            <td>Fr.: 18-19Uhr</td>
+            <td>Sigrid</td>
+          </tr>
+          <tr>
+            <td>TuS Nippes</td>
+            <td>Vinyasa Yoga</td>
+            <td>Nordpark</td>
+            <td>Sa.: 10-11Uhr</td>
+            <td>Yvonne</td>
+          </tr>
+          <tr>
+            <td>If e.V.</td>
+            <td>Senior-Fit</td>
+            <td>Nordpark</td>
+            <td>So.: 10-11Uhr</td>
+            <td>Paula</td>
+          </tr>
+        </table><br>
+        Die Nordic-Walking Runde, die wir organisieren (Mo.: 18-19Uhr) ist zum
+        Beispiel die Folgende (Klicke auf die Karte für mehr Informationen zu
+        der Runde): <br>
+        <div class='center'>
+          <a href="https://www.komoot.de/tour/1092024259"><img
+            src="img/komoot_runde_chorweiler.png" width=200 height=200></a>
+        </div><br>
+        Abschließend zu diesem langen Info-Segment noch einmal der gesamte Flyer
+        des Kölle-Aktiv Projektes:<br>
+        <iframe src="img/flyer_koelle_aktiv.pdf" width="100%" height="600"></iframe><br>
+        Wir hoffen wir konnten euch motivieren den Frühling zu genießen und
+        etwas rauszukommen.<br>
+        <br>
+        Viele Grüße,<br>
+        der Vorstand.<br>
+      <p>
       <h3> Einladung zu unserer <b>Jahreshauptversammlung 23.03.2023</b><br><small>11.03.2023</small></h3>
         Sehr geehrte/s Mitglied/er,<br>
         zu unserer Jahreshauptversammlung laden wir Sie hiermit herzlich ein.<br>
